# matchart

./: .gitignore  README.md  pyproject.toml
src/matchart/chart/: main.py
src/matchart/chart/core/bar/: main.py
src/matchart/chart/core/bar/core/: _clustered.py  _stacked.py  _standard.py  main.py
src/matchart/chart/core/line/: main.py
src/matchart/chart/core/line/core/: _standard.py  main.py
src/matchart/data/: main.py
src/matchart/data/core/: _limit.py  _sort.py  main.py
src/matchart/style/bar/: main.py
src/matchart/style/bar/core/: _border.py  _color.py  _label.py  _utils.py  main.py
src/matchart/style/bar/core/label/: _basic_anchor.py  _basic_drawer.py  _frame_anchor.py  _frame_drawer.py
src/matchart/style/bar/core/label/category/: _basic_anchor.py  _basic_drawer.py  _frame_anchor.py  _frame_drawer.py  _utils.py
src/matchart/style/bar/core/label/standard/: _basic_anchor.py  _basic_drawer.py  _frame_anchor.py  _frame_drawer.py
src/matchart/style/base/: main.py
src/matchart/style/base/core/axis/: main.py
src/matchart/style/base/core/grid/: main.py
src/matchart/style/base/core/legend/: main.py
src/matchart/style/base/core/text/: main.py
src/matchart/style/line/: main.py
src/matchart/style/line/core/: _area.py  _label.py  _line.py  _marker.py  _utils.py  main.py
src/matchart/style/utils/: input_converter.py  num_formatter.py
src/matchart/style/utils/data_label/: basic_labeler.py  frame_autosizer.py  frame_builder.py  frame_labeler.py  frame_styler.py
src/matchart/utils/: fonts.py  measures.py
(+24 files in other folders)
