[project]
name = "matchart"
version = "0.1.0"
description = "Simplified charting library built on top of matplotlib."
readme = "README.md"
authors = [{ name = "Osama Shahatit", email = "osamaa.shahatit@gmail.com" }]
requires-python = "==3.12.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=7.1.0"]

[tool.ruff.lint]
extend-select = ["I", "N", "R"]
ignore = ["E501", "N801"]
